fix: 'add word' button was covered by special characters box on narrow screens

--- a/src/creator.scss
+++ b/src/creator.scss
@@ -638,7 +638,7 @@ hr {
 
 .add {
 	width: calc(100% - 650px);
-	padding: 16px 0px;
+	padding: 30px 0px;
 	border-bottom: solid 1px #ddd;
 	background: #f0f8ec;
 
